fix: page end spacing

--- a/src/features/dashboard/components/AppForm/app-form.module.scss
+++ b/src/features/dashboard/components/AppForm/app-form.module.scss
@@ -126,6 +126,7 @@ fieldset .customTextInput:last-child {
 
 .submit_container {
   margin-top: rem(2.5);
+  margin-bottom: rem(5.5);
   display: flex;
   align-items: center;
   justify-content: center;
